[tool.poetry]
name = "png2map"
version = "0.1.0"
description = "Tool to convert a png to Minecraft map data."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyNBT = "^3.1.0"
pypng = "^0.0.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
